# OpenPhotoSphere

./: .gitattributes  .gitignore  pose.kt  proj.kt  ring.kt  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/pavit/openphotosphere/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeStitcher.cpp
app/src/main/java/com/pavit/openphotosphere/: MainActivity.kt
app/src/main/java/com/pavit/openphotosphere/data/: ProjectsStore.kt
app/src/main/java/com/pavit/openphotosphere/math/: RingProjector.kt
app/src/main/java/com/pavit/openphotosphere/opencv/: NativeStitcher.kt  PanoramaStitcher.kt
app/src/main/java/com/pavit/openphotosphere/sensor/: PoseProvider.kt
app/src/main/java/com/pavit/openphotosphere/ui/: App.kt  RingScreen.kt
app/src/main/java/com/pavit/openphotosphere/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/pavit/openphotosphere/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
opencv-4.12.0-android-sdk/OpenCV-android-sdk/sdk/: build.gradle
